--- a/Struct/frontend/src/pages/SortShift/SortShift.css
+++ b/Struct/frontend/src/pages/SortShift/SortShift.css
@@ -5,10 +5,16 @@
     align-items: center;
     padding: 2rem;
   }
-  
+  .title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #1f2937;
+    margin-top: 30px;
+  }
   .tagline {
+    margin-top: 8px;
     font-style: italic;
-    font-size: 20px;
+    font-size: 15px;
     color: #4b5563;
     margin-bottom: 2rem;
   }
