--- a/Struct/frontend/src/pages/SortShiftInsertion/SortShiftInsertion.module.css
+++ b/Struct/frontend/src/pages/SortShiftInsertion/SortShiftInsertion.module.css
@@ -21,13 +21,13 @@
   
     
     .background-video {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh; 
         object-fit: cover;
-        z-index: -1; /* Ensure it stays behind other content */
+        z-index: -1; 
     }
     .content{
         position: relative;
@@ -112,8 +112,8 @@
     }
     
     .grid-item.selected {
-    border: 2px solid rgb(242, 168, 8);
-    box-shadow: 0 0 10px rgb(242, 168, 8);
+    border: 2px solid rgb(215, 8, 242);
+    box-shadow: 0 0 10px rgb(215, 8, 242);
     }
     
     .controls {
@@ -142,12 +142,14 @@
     }
     
     .add-btn {
-    background-color: rgb(1, 210, 1);
-    color: rgb(0, 0, 0);
-    }
+        background-color: rgb(189, 189, 189);
+        color: rgb(37,37,37);
+        }
     .remove-btn {
-    background-color: red;
-    color: rgb(0, 0, 0);
+        font-size: 18px;
+        font-style: bold;
+        background-color: rgb(118, 118, 118);
+        color: rgb(37,37,37);
     }
     .iterations {
     border: 3px solid rgb(167, 167, 167);
